--- a/techcon_website/schedule.html
+++ b/techcon_website/schedule.html
@@ -20,7 +20,9 @@
   </header>
 
   <main>
-    <table border="1">
+    <table>
+            <table border="1">
+
       <caption>Detailed Schedule of Events for TechCon 2024</caption>
       <thead>
         <tr>
